fixed the spacing and removed the dots from the header.

--- a/fullstack/fotomatic/resources/css/style.css
+++ b/fullstack/fotomatic/resources/css/style.css
@@ -45,12 +45,16 @@ header {
   width: 100%;
   border-bottom: solid 1px #c6c1c1;
   background-color: white;
+  max-height: 85px;
+  min-height: 48px;
+  z-index: 100;
+
 }
 
 header .content {
   display: flex;
   align-items: center;
-  padding: 1.875rem;
+  padding: 0 1.875rem;
 }
 
 header .logo {
@@ -63,6 +67,7 @@ header nav ul {
 
 nav li {
   padding-left: 3.5rem;
+  list-style-type: none;
 }
 
 nav a {
